# veynor-python

./: README.md  pyproject.toml
veynor/: __init__.py  cli.py  client.py  follower.py  kalshi_trader.py  polymarket_trader.py
veynor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
