[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veynor"
version = "1.2.0"
description = "Prediction market intelligence for agents and traders — Kalshi + Polymarket"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Veynor", email = "hello@veynor.xyz" }]
requires-python = ">=3.9"
keywords = ["prediction-markets", "kalshi", "polymarket", "finance", "trading", "quant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.28", "click>=8.0"]

[project.optional-dependencies]
trade = [
    "py-clob-client>=0.19",
    "eth-account>=0.11",
]
dev = [
    "pytest",
    "mypy",
]

[project.scripts]
veynor = "veynor.cli:main"

[project.urls]
Homepage    = "https://veynor.xyz"
Repository  = "https://github.com/veynor/veynor-python"
"API Docs"  = "https://veynor.xyz/agents"

[tool.setuptools.packages.find]
where = ["."]
include = ["veynor*"]
